--- a/vignettes/Figure-2-hashing.Rmd
+++ b/vignettes/Figure-2-hashing.Rmd
@@ -35,7 +35,8 @@ source("../R/hto_sim.R")
 source("../R/plot_hashtag.R")
 ````
 
-# hashing based demultiplexing performance decreases with hashing quality:
+# hashing based demultiplexing performance dec
+reases with hashing quality:
 
 ## high qual 
 
@@ -59,14 +60,14 @@ do.call(grid.arrange,c(plot,nrow=1))
 
 ````{r fig.width=12,fig.height=3}
 
-load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_e/e_final_sce.rdata")
+load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_e_25_1/e_final_sce.rdata")
 df_qual<-perCellQCMetrics(sce)
 sce$qual<-df_qual$sum>1000 | df_qual$detected>750
 table(sce$qual)
-#sce<-sce[,sce$qual==TRUE]
-hto_j<-counts(altExp(sce,"HTO"))
-dim(hto_j)
-df_j<-data.frame(t(hto_j))
+# #sce<-sce[,sce$qual==TRUE]
+# hto_j<-counts(altExp(sce,"HTO"))
+# dim(hto_j)
+# df_j<-data.frame(t(hto_j))
 
 counts_low<-hto_j
 library(stringr)
@@ -76,78 +77,8 @@ truth_low<-sce$truth
 table(sce$truth)
 ````
 
-## update function to handle this
-
-````{r eval=FALSE}
-
-sce$knn[sce$knn=="multiplet"]<-"Doublet"
-sce$knn_jacc[sce$knn_jacc=="multiplet"]<-"Doublet"
 
 
-````
-
-
-
-
-
-````{r eval=FALSE}
-methods<-c("htodemux","bff_raw","bff_cluster","dropletutils","multiseq","gmm_demux")
-library(cellhashR)
-colnames(counts)<-seq_len(dim(counts)[2])
-chr<-GenerateCellHashingCalls(counts,
-                              methods=methods,
-                              doTSNE = FALSE)
-
-chr<-chr[order(as.numeric(chr$cellbarcode)),]
-chr$gt<-truth
-
-colnames(counts_low)<-seq_len(dim(counts_low)[2])
-chr_low<-GenerateCellHashingCalls(counts_low,
-                              methods=methods,
-                              doTSNE = FALSE)
-
-chr_low<-chr_low[order(as.numeric(chr_low$cellbarcode)),]
-chr_low$gt<-truth_low
-
-library(caret)
-methods=c("htodemux","bff_cluster","bff_raw")
-df_full<-data.frame()
-for (i in seq_along(methods)) {
-  m<-methods[i]
-  data_ch=chr[[m]]
-  ref_ch=chr[['gt']]
-  data_fac<-factor(data_ch,union(data_ch,ref_ch))
-  ref_fac<-factor(ref_ch,union(data_ch,ref_ch))
-  cf<-confusionMatrix(data=data_fac,reference=ref_fac)
-  recall<-cf$byClass[,5]
-  precision<-cf$byClass[,6]
-  df<-data.frame(class=rownames(cf$byClass),data='high',method=m,precision=precision,recall=recall)
-  df_full<-rbind(df_full,df)
-}
-
-
-
-for (i in seq_along(methods)) {
-  m<-methods[i]
-  data_ch=chr_low[[m]]
-  ref_ch=chr_low[['gt']]
-  data_fac<-factor(data_ch,union(data_ch,ref_ch))
-  ref_fac<-factor(ref_ch,union(data_ch,ref_ch))
-  cf<-confusionMatrix(data=data_fac,reference=ref_fac)
-  recall<-cf$byClass[,5]
-  precision<-cf$byClass[,6]
-  df<-data.frame(class=rownames(cf$byClass),data='low',method=m,precision=precision,recall=recall)
-  df_full<-rbind(df_full,df)
-}
-
-df_full<-df_full[!is.na(df_full$precision),]
-## barplot
-ggbarplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",position=position_dodge())
-ggbarplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",position=position_dodge())
-
-ggboxplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data", label='class',label.select = list(top.down = 1))
-ggboxplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data", label='class',label.select = list(top.down = 1))
-````
 
 ````{r fig.height=3 , fig.width=12}
 
@@ -226,57 +157,31 @@ for (i in seq_along(methods)) {
 
 df_full<-df_full[!is.na(df_full$recall),]
 df_full$class<-gsub("Class: ","",df_full$class)
-## barplot
-ggbarplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",position=position_dodge())
-ggbarplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",position=position_dodge())
+
+
 
 ````
 
 
 ````{r fig.height=5,fig.width=12}
-rec<-ggboxplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",,repel=TRUE)
-prec<-ggboxplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",,repel=TRUE)
+df_full$method
+df_full$method<-recode(df_full$method,htodemux="HTODemux",bff_raw="BFF_raw",bff_cluster="BFF_cluster",gmm_demux="GMM-Demux",demuxsnp="demuxSNP")
+rec<-ggboxplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",,repel=TRUE,title="Per group precision")
+prec<-ggboxplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",,repel=TRUE,title="Per group recall")
 
-ggpar(prec,legend.title = "data quality",ylim = c(0,1)) + ggpar(rec,legend.title="data quality",ylim = c(0,1))
+ggarrange(ggpar(prec,legend.title = "data quality",ylim = c(0,1)),ggpar(rec,legend.title="data quality",ylim = c(0,1)),common.legend = TRUE)
 
-````
 
-````{r eval=FALSE}
-set.seed(2)
-z<-matrix(0,nrow=6,ncol=dim(broad.sce.sim)[2])
-for (i in 1:6) {
-  names<-c("K1","K2","K3","K4","K5","K6")
-  n<-names[i]
-  z[i,broad.sce.sim$truth==n]<-1
-  
-}
-
-nsinglet=as.vector(table(broad.sce.sim$truth[broad.sce.sim$truth!="Doublet"]))[1:6]
-ngroups=6
-ndoub=sum(broad.sce.sim$truth=="Doublet")
-doub<-matrix(0,nrow=ngroups,ncol=ndoub)
-  prob=proportions(nsinglet)
-  ind<-replicate(n=ndoub,sample(seq_len(ngroups),size=2,prob=prob))
-  for (j in seq_len(ndoub)) {
-    doub[ind[,j],j]<-1
-  }
-z[,broad.sce.sim$truth=="Doublet"]<-doub
-
-size_sig=rep(10,6)
-size_bg=rep(7,6)
-mu_sig=c(500,500,400,500,200,400)
-mu_bg=c(110,120,90,100,60,80)
-
-counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = z)
 
 ````
+
 
 
 ````{r}
 total_nneg<-c()
 total_acc<-c()
 total_nnegpc<-c()
-chr_low$demuxsnp<-sce$knn_jacc
+chr_low$demuxsnp<-sce$knn_balanced
 methods=c("htodemux","bff_cluster","bff_raw","gmm_demux","demuxmix","demuxsnp")
 for (i in seq_along(methods)) {
   m<-methods[i]
@@ -296,6 +201,7 @@ names(total_acc)<-methods
 df_methods_low<-data.frame(method=methods,pc_neg=total_nnegpc,accuracy=total_acc)
 df_methods_low$data<-"low"
 
+methods=c("htodemux","bff_cluster","bff_raw","gmm_demux","demuxmix","demuxsnp")
 for (i in seq_along(methods)) {
   m<-methods[i]
   data_ch=chr[[m]]
@@ -314,9 +220,17 @@ names(total_acc)<-methods
 
 df_methods_high<-data.frame(method=methods,pc_neg=total_nnegpc,accuracy=total_acc)
 df_methods_high$data="high"
+df_methods_high$pc_neg[df_methods_high$method=="demuxsnp"]<-NaN
 df_methods<-rbind(df_methods_high,df_methods_low)
-ggbarplot(df_methods,x='method',y='accuracy',fill = 'data',position=position_dodge(),color = 'data',title='Overall Classificaton Accuracy between methods and high/low quality hashing',xlab='method',ylab='Overall CLassification Accuracy')+ylim(0,1)
-ggbarplot(df_methods,x='method',y='pc_neg',fill = 'data',position=position_dodge(),color = 'data' ,title='% Negatives assigned between methods and high/low quality hashing',xlab='method',ylab='% hashing negatives')
+
+df_methods$pc_neg<-df_methods$pc_neg*100
+df_methods$method<-recode(df_methods$method,htodemux="HTODemux",bff_raw="BFF_raw",bff_cluster="BFF_cluster",gmm_demux="GMM-Demux",demuxsnp="demuxSNP")
+
+gg1<-ggbarplot(df_methods,x='method',y='accuracy',fill = 'data',position=position_dodge(),color = 'data',title='Overall accuracy between methods and high/low quality hashing',xlab='method',ylab='Overall CLassification Accuracy',label = TRUE,lab.nb.digits = 2)+ylim(0,1)
+gg2<-ggbarplot(df_methods,x='method',y='pc_neg',fill = 'data',position=position_dodge(),color = 'data' ,title='% negatives assigned between methods and high/low quality hashing', xlab='method', ylab='% hashing negatives')
+
+ggpar(gg1,legend.title = "data quality")
+ggpar(gg2,legend.title = "data quality")
 ````
 
 
@@ -358,157 +272,6 @@ ggscatter(compar,x='Recall',y='Precision',color = 'group',shape='algorithm',labe
 
 ````
 
-````{r}
-
-sum(as.character(sce$knn)==as.character(sce$truth))/length(sce$truth)
-sum(as.character(sce$dmm)==as.character(sce$truth))/length(sce$truth)
-
-sce$knn<-as.character(sce$knn)
-sce$dmm<-as.character(sce$dmm)
-````
-
-
-````{r fig.height=6,fig.width=4}
-dmm<-c()
-knn<-c()
-for (i in 1:7) {
-  h<-levels(sce$truth)[i]
-  dmm[i]<-sum((sce$dmm[sce$truth==h]==sce$truth[sce$truth==h])/length(sce$truth[sce$truth==h]))
-  knn[i]<-sum((sce$knn[sce$truth==h]==sce$truth[sce$truth==h])/length(sce$truth[sce$truth==h]))
-}
-
-df<-data.frame(demuxmix=dmm,demuxSNP=knn)
-rownames(df)<-levels(sce$truth)[1:7]
-df$label<-levels(sce$truth)[1:7]
-
-
-ggpaired(df, cond1 = "demuxmix", cond2 = "demuxSNP",
-    color="label", palette = "jco",ylab="per-label accuracy")
-````
-
-````{r}
 
 
 
-````
-
-## Misassigned cells generally fall between signal and background peak:
-
-````{r}
-
-
-````
-
-
-
-## Combined hashing and SNPs approachs performs better than standalone hashing algorithms.
-
-````{r}
-
-
-
-````
-
-````{r eval=FALSE}
-
-#demuxmix
-
-broad.sce.sim$dmm<-as.factor(gsub("Hashtag","K",dmmlabels$HTO))
-cf<-confusionMatrix(data=broad.sce.sim$dmm,reference=broad.sce.sim$truth)
-cf$byClass[,5:6]
-cf_demuxmix<-as.data.frame(cf$byClass[,5:6])
-cf_demuxmix$algorithm<-"demuxmix"
-cf_demuxmix$group<-gsub("Class: ","",rownames(cf_demuxmix))
-
-````
-
-````{r eval=FALSE}
-
-compar<-rbind(cf_demuxSNP,cf_demuxmix)
-compar<-compar[c(grep("K",compar$group), grep("Doublet",compar$group)),]
-compar$group<-factor(compar$group,levels=c("K1","K2","K3","K4","K5","K6","Doublet"))
-ggscatter(compar,x='Recall',y='Precision',color = 'group',shape='algorithm',label='group',palette = dittoColors(),size=4,legend="right")+ xlim(0.2,1)+ylim(0.2,1)
-
-````
-
-
-````{r}
-
-sce2<-sce[,colSums(counts(sce))>1000]
-library(ComplexHeatmap)
-Heatmap(counts(altExp(sce2,"SNP")),
-        cluster_rows=FALSE,
-        cluster_columns=TRUE,
-        column_split=sce2$truth,
-        column_title_rot = 45)
-````
-
-
-````{r eval=FALSE}
-load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_h/h_final_sce.rdata")
-train_cells<-sce$train
-predict_cells<-!sce$train
-k=10
-d=200
-   train <- counts(altExp(sce, "SNP"))[, train_cells == TRUE]
-    train[train == -1] <- 0
-    labels <- sce$labels[train_cells == TRUE]
-    labels <- droplevels(labels)
-    colnames(train) <- labels
-    combs <- expand.grid(levels(labels), levels(labels))
-    combs <- combs[combs$Var1 != combs$Var2, ]
-    p <- combn(unique(combs$Var1), 2)
-    combs_joined <- paste(p[1, ], p[2, ])
-    all <- matrix(data = NA, nrow = dim(altExp(sce, "SNP"))[1], 
-        ncol = d * length(combs_joined))
-    for (i in seq_along(combs_joined)) {
-        l1 <- as.character(combs$Var1[i])
-        l2 <- as.character(combs$Var2[i])
-        d1 <- train[, labels == l1]
-        d2 <- train[, labels == l2]
-        s1 <- sample(seq_len(dim(d1)[2]), d, replace = TRUE)
-        s2 <- sample(seq_len(dim(d2)[2]), d, replace = TRUE)
-        doubs <- d1[, s1] == 1 | d2[, s2] == 1
-        doubs <- doubs * 1
-        doubs[doubs == 0] <- c(0)
-        all[, c(1 + (i - 1) * d):c(d + (i - 1) * d)] <- doubs
-        colnames(all) <- rep("Doublet", dim(all)[2])
-    }
-    train_all <- cbind(train, all)
-    pred <- as.data.frame(counts(altExp(sce, "SNP"))[, predict_cells == 
-        TRUE])
-    pred[pred == -1] <- 0
-    y = as.integer(as.factor(colnames(train_all)))
-    result_kern <- KernelKnn::KernelKnn(data = t(train_all), TEST_data = t(pred), 
-        y = y, k = k, Levels = seq_along(levels(as.factor(colnames(train_all)))), regression = F, method = "jaccard_coefficient")
-    ID <- apply(result_kern, 1, which.max)
-    z <- levels(as.factor(colnames(train_all)))
-    names(z)<-seq_along(z)
-    ID<-recode(as.character(ID), !!!z)
-#> [1] "Apple"  "Banana" "Banana" "Apple"
-
-    sce$knn_jacc <- as.character(sce$labels)
-    sce$knn_jacc[predict_cells == TRUE] <- as.character(as.factor(ID))
-    sce$knn_jacc <- as.factor(sce$knn_jacc)
-  table(sce$knn_jacc,sce$truth)
-  library(mclust)
-  adjustedRandIndex(sce$knn,sce$truth)
-  adjustedRandIndex(sce$knn_jacc,sce$truth)
-  
-  snp<-altExp(sce,"SNP")
-  logcounts(snp)<-counts(snp)
-  snp<-scater::runPCA(snp)
-  snp$class<-sce$truth
-  snp$classdoub<-sce$truthalldoub
-  snp$knn<-sce$knn_jacc
-  snp<-runTSNE(snp)
-  dittoDimPlot(snp,reduction.use="TSNE","class")
-    dittoDimPlot(snp,reduction.use="TSNE","classdoub")
-  dittoDimPlot(snp,reduction.use="TSNE","knn")
-    dittoDimPlot(snp,reduction.use="PCA","knn")
-    
-    sce$truth<-gsub("K","Hashtag",sce$truth)
-    
-    sum(sce$knn==sce$truth)/length(sce$truth)
-    sum(sce$knn_jacc==sce$truth)/length(sce$truth)
-````
